native/crates/specular-scene/tests/snapshots/page_scroll__a_region_comment_on_a_page_follows_the_scroll_and_shows_through_the_page.snap
---
source: crates/specular-scene/tests/page_scroll.rs
expression: app.scene_snapshot()
---
canvas page p1 100,100 400x300 r=8
screen rect 100,100 400x300 r=8 stroke=#a6a09b/1/outside
screen text "example.com/p1" 100,79.5 wrap=400 ellipsis box-h=16.5 11/15.4 w500 #6b6b6b middle clip=100,79.5 400x20.5
screen rect 150,120 100x100 r=4 fill=#ff637e1a clip=100,100 400x300
screen path M155,121 L245,121 C247.21,121 249,122.79 249,125 L249,215 C249,217.21 247.21,219 245,219 L155,219 C152.79,219 151,217.21 151,215 L151,125 C151,122.79 152.79,121 155,121 Z stroke=#ff637eb3/2 dash=6/4 clip=100,100 400x300
