native/crates/specular-scene/tests/snapshots/page_scroll__a_shape_scrolled_out_of_the_page_is_not_drawn.snap
---
source: crates/specular-scene/tests/page_scroll.rs
expression: app.scene_snapshot()
---
canvas page p1 100,100 400x300 r=8
screen rect 100,100 400x300 r=8 stroke=#a6a09b/1/outside
screen text "example.com/p1" 100,79.5 wrap=400 ellipsis box-h=16.5 11/15.4 w500 #6b6b6b middle clip=100,79.5 400x20.5
